# keyopolls-backend

./: .dockerignore  .env.example  .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.traefik-dev.yml  logging.yaml  pyproject.toml
.github/workflows/: ci.yml
core/: api.py  settings.py  urls.py
keyopolls/articles/: api.py  models.py  schemas.py
keyopolls/articles/migrations/: 0001_initial.py  0002_remove_article_articles_ar_author__117e9b_idx_and_more.py
keyopolls/comments/: models.py  schemas.py
keyopolls/comments/api/: __init__.py  search.py
keyopolls/comments/migrations/: 0001_initial.py  0002_remove_genericcomment_comments_ge_member__01a620_idx_and_more.py  0003_remove_genericcomment_comment_has_exactly_one_profile_type_and_more.py  0004_remove_genericcomment_comments_ge_profile_9e5d61_idx_and_more.py  0005_remove_genericcomment_comments_ge_is_dele_bd092b_idx_and_more.py  0006_alter_genericcomment_profile_type_and_more.py  0007_genericcomment_dislike_count.py  0008_genericcomment_bookmark_count_and_more.py
keyopolls/common/: admin.py  router.py  schemas.py  utils.py
keyopolls/common/api/: bookmark.py  follow.py  insights.py  reaction.py  tags.py  todo.py
keyopolls/common/migrations/: 0001_initial.py  0002_alter_category_options_remove_category_allows_gifs_and_more.py  0002_uploadedimage_alter_media_media_type_genericcomment_and_more.py  0003_delete_genericcomment.py  0003_tag_description.py  (+16 more)
keyopolls/communities/: models.py  schemas.py
keyopolls/flashcards/: api.py  models.py  schemas.py
keyopolls/notifications/: api.py  fcm_api.py  fcm_services.py  firebase.py  models.py  notification_utils.py  schemas.py  services.py  tasks.py  utils.py
keyopolls/polls/: models.py  schemas.py
keyopolls/profile/: middleware.py  models.py  schemas.py  services.py
keyopolls/utils/: __init__.py  contentUtils.py  email_domains.py  geoipUtils.py  mediaUtils.py  profileutils.py
templates/: notification_email.html  otp_email.html
(+56 files in other folders)
