[project]
name = "keyopolls"
version = "0.1.0"
description = ""
authors = [{ name = "dinakar17", email = "dinakarchennupati777@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3,<6.0.0",
    "django-ninja==1.3.0",
    "python-decouple>=3.8,<4.0",
    "dj-database-url>=3.0.0,<4.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "django-cors-headers>=4.7.0,<5.0.0",
    "ninja-put-patch-file-upload-middleware>=0.1.4,<0.2.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"
pre-commit = "^4.2.0"
